Simple drawing added
	new file:   1.py
	modified:   Makefile
	modified:   geometry.cpp
	new file:   graphics.py
	new file:   test
	modified:   test.cpp

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,2 @@
-test: test.cpp geometry.cpp geometry.h
+test.exe: test.cpp geometry.cpp geometry.h
     g++ -DDEBUG -O2 -Wall -Wextra -Wconversion --std=c++11 test.cpp geometry.cpp -o test.exe
